couleurs un peu plus contrastées, fixes #118

--- a/public/app/styles/main.css
+++ b/public/app/styles/main.css
@@ -73,8 +73,13 @@ body {
 .edt-devoir-fait{ background-color: #8dc47c }
 /* .edt-devoir-note-maison{ background-color: #00afd4 } */
 /* .edt-devoir-note-surveille{ background-color: #f56d68 } */
-.edt-devoir-note-maison{ background-color: #9d79a7 }
-.edt-devoir-note-surveille{ background-color: #8c6896 }
+.edt-devoir-note-maison{ background-color: #f1bfff }
+.edt-devoir-note-surveille{ background-color: #e173ff }
+
+/* #e173ff */
+/* #70397f */
+/* #c199cc */
+/* #f1bfff */
 
 .edt-cours-saisie,
 .edt-devoir-a-faire,
